OpenJDK対応。